--- a/rule/Clash/Emby/Emby.yaml
+++ b/rule/Clash/Emby/Emby.yaml
@@ -1,61 +1,40 @@
-# NAME: Emby
-# AUTHOR: justdoiting
-# REPO: https://github.com/justdoiting/emby-rules
-# UPDATED: 2024-02-25 16:05:10
-# DOMAIN: 3
-# DOMAIN-KEYWORD: 3
-# DOMAIN-SUFFIX: 44
-# PROCESS-NAME: 1
-# TOTAL: 51
-payload:
-  - DOMAIN,emby.enjoyit.eu.org
-  - DOMAIN,emby.lcloud.wiki
-  - DOMAIN,notnetflix.cos.cat
-  - DOMAIN-SUFFIX,123456.al
-  - DOMAIN-SUFFIX,285286.xyz
-  - DOMAIN-SUFFIX,agahk1.jmsooo.com
-  - DOMAIN-SUFFIX,agajp1.jmsooo.com
-  - DOMAIN-SUFFIX,agasg1.jmsooo.com
-  - DOMAIN-SUFFIX,aws.jmsooo.com
-  - DOMAIN-SUFFIX,cf1.jmsooo.com
-  - DOMAIN-SUFFIX,cristiamo.xyz
-  - DOMAIN-SUFFIX,emby.cjpc.cc
-  - DOMAIN-SUFFIX,emby.cjpc.tv
-  - DOMAIN-SUFFIX,emby.cjpc.xyz
-  - DOMAIN-SUFFIX,emby.cristiamo.top
-  - DOMAIN-SUFFIX,emby.flowercloud.yt
-  - DOMAIN-SUFFIX,emby.immtel.com
-  - DOMAIN-SUFFIX,emby.maying.club
-  - DOMAIN-SUFFIX,emby.mcwy.me
-  - DOMAIN-SUFFIX,emby.mdss.cloud
-  - DOMAIN-SUFFIX,emby.neko.edu.rs
-  - DOMAIN-SUFFIX,emby.nexitally.com
-  - DOMAIN-SUFFIX,emby.nyancat.net
-  - DOMAIN-SUFFIX,emby.ok.edu.hk
-  - DOMAIN-SUFFIX,emby.paoche.ooo
-  - DOMAIN-SUFFIX,emby.prprcloud.com
-  - DOMAIN-SUFFIX,emby.wtf
-  - DOMAIN-SUFFIX,emby.xeton.dev
-  - DOMAIN-SUFFIX,emby.ytoo.li
-  - DOMAIN-SUFFIX,embyplus.org
-  - DOMAIN-SUFFIX,embyserver.ga
-  - DOMAIN-SUFFIX,hinet.jmsooo.com
-  - DOMAIN-SUFFIX,imetyou.top
-  - DOMAIN-SUFFIX,jellyfin.asia
-  - DOMAIN-SUFFIX,jellyfin.xeton.dev
-  - DOMAIN-SUFFIX,line.emby.men
-  - DOMAIN-SUFFIX,mickeycloud.com
-  - DOMAIN-SUFFIX,movie.xeton.dev
-  - DOMAIN-SUFFIX,ntt1.jmsooo.com
-  - DOMAIN-SUFFIX,ohhhh.org
-  - DOMAIN-SUFFIX,peachmv.me
-  - DOMAIN-SUFFIX,pilipiliultra.com
-  - DOMAIN-SUFFIX,plusmedia.site
-  - DOMAIN-SUFFIX,poloemby.xyz
-  - DOMAIN-SUFFIX,pornemby.club
-  - DOMAIN-SUFFIX,servers.xeton.dev
-  - DOMAIN-SUFFIX,xmsl.org
-  - DOMAIN-KEYWORD,emby.wtf
-  - DOMAIN-KEYWORD,jmsooo
-  - DOMAIN-KEYWORD,odysseyplus
-  - PROCESS-NAME,com.mb.android
+
+# > TLS代理
+DOMAIN,e1.tls.ink
+
+
+# > Misakaf服务器
+
+DOMAIN,cdn.misakaf.org
+DOMAIN,push-kr.misakaf.org
+DOMAIN,porn.aca.best
+DOMAIN,emby.aca.best
+DOMAIN,102.223.180.108
+DOMAIN,stream1.misakaf.org
+DOMAIN,stream2.misakaf.org
+DOMAIN,stream3.misakaf.org
+DOMAIN,stream4.misakaf.org
+# > TreeDiagram服务器
+DOMAIN,789.123456.al
+
+# > 终点站服务器
+DOMAIN,pub1.emby.wtf
+DOMAIN,pub2.emby.wtf
+DOMAIN,pub3.emby.wtf
+DOMAIN,pub4.emby.wtf
+
+DOMAIN,public.emby.ws
+
+# > Nmemby服务器
+DOMAIN,film.ohhhh.org
+
+# > lyrebirdemby服务器
+DOMAIN,cdn.lyrebirdemby.com
+# > gugu服务器
+DOMAIN,main.gugumedia.link
+DOMAIN,pro.gugumedia.link
+DOMAIN,front.gugumedia.link
+DOMAIN,gu.iuii.cc
+
+# > micu服务器
+host,tv.micu.hk,direct
