--- a/rule/Clash/Emby/Emby.yaml
+++ b/rule/Clash/Emby/Emby.yaml
@@ -1,40 +1,102 @@
+# > 终点站直连
+DOMAIN,pub1.emby.wtf,DIRECT
+DOMAIN,pub2.emby.wtf,DIRECT
+DOMAIN,pub3.emby.wtf,DIRECT
 
-# > TLS代理
-DOMAIN,e1.tls.ink
+#DOMAIN,pub1.term.wtf,DIRECT
+#DOMAIN,pub2.term.wtf,DIRECT
+#DOMAIN,pub3.term.wtf,DIRECT
+# > 桃子私服
+DOMAIN,embymv.top,DIRECT
+# > 桃子公益服
+DOMAIN,embymv.link,DIRECT
+
+# > AWA影视
+DOMAIN,tv.811861.xyz,DIRECT
 
 
-# > Misakaf服务器
 
-DOMAIN-SUFFIX,cdn.misakaf.org,Emby
-DOMAIN-SUFFIX,push-kr.misakaf.org,Emby
-DOMAIN-SUFFIX,porn.aca.best,Emby
-DOMAIN-SUFFIX,emby.aca.best,Emby
-DOMAIN-SUFFIX,102.223.180.108,Emby
-DOMAIN-SUFFIX,stream1.misakaf.org,Emby
-DOMAIN-SUFFIX,stream2.misakaf.org,Emby
-DOMAIN-SUFFIX,stream3.misakaf.org,Emby
-DOMAIN-SUFFIX,stream4.misakaf.org,Emby
-# > TreeDiagram服务器
-DOMAIN-SUFFIX,789.123456.al,Emby
-
-# > 终点站服务器
-DOMAIN-SUFFIX,pub1.emby.wtf,Emby
-DOMAIN-SUFFIX,pub2.emby.wtf,Emby
-DOMAIN-SUFFIX,pub3.emby.wtf,Emby
-DOMAIN-SUFFIX,pub4.emby.wtf,Emby
-
-DOMAIN-SUFFIX,public.emby.ws,Emby
-
-# > Nmemby服务器
-DOMAIN-SUFFIX,film.ohhhh.org,Emby
+# > 飞跃媒体库
+DOMAIN,z.sfcj.org,DIRECT
 
 # > lyrebirdemby服务器
-DOMAIN-SUFFIX,cdn.lyrebirdemby.com,Emby
+DOMAIN,cdn.lyrebirdemby.com,DIRECT
+
+
+# > Misakaf VIP服务器
+DOMAIN,embyvip.misakaf.org,DIRECT
+
+# > Misakaf服务器
+DOMAIN,emby.misakaf.org,DIRECT
+
+
 # > gugu服务器
-DOMAIN-SUFFIX,main.gugumedia.link,Emby
-DOMAIN-SUFFIX,pro.gugumedia.link,Emby
-DOMAIN-SUFFIX,front.gugumedia.link,Emby
-DOMAIN-SUFFIX,gu.iuii.cc,Emby
+DOMAIN,main.gugumedia.site,DIRECT
+DOMAIN,v6.gugu.media,DIRECT
+DOMAIN,node1.guguemby.site,DIRECT
 
 # > micu服务器
-DOMAIN-SUFFIX,tv.micu.hk,direct
+DOMAIN-SUFFIX,micu.hk,DIRECT
+
+# > 飞跃彩虹服务器
+DOMAIN,581658.best,DIRECT
+DOMAIN,7777777.buzz,DIRECT
+
+
+# > 黑丝服务器
+DOMAIN,heisi.nekobox.best,DIRECT
+DOMAIN,i109.com,DIRECT
+
+# > 叔服服务器
+DOMAIN,jz.mcjoker.xyz,DIRECT
+
+# > Nme服务器
+DOMAIN,film.hovervan.org,DIRECT
+
+# > 众筹服
+DOMAIN,pemby.127255.best,DIRECT
+DOMAIN,pemby.127255.best,DIRECT
+DOMAIN,emby2.lilyya.xyz,DIRECT
+
+
+
+# > 桃子私服
+#DOMAIN,embymv.top
+
+# > 探花TV
+DOMAIN,www.tanhuatv.site
+# > 叔服
+DOMAIN,emby3.mcjoker.xyz
+
+# > 黑丝服务器
+DOMAIN,h1.i109.com
+DOMAIN,h2.i109.com
+
+# > Misakaf服务器
+DOMAIN,cdn.misakaf.org
+DOMAIN,push-kr.misakaf.org
+DOMAIN,porn.aca.best
+DOMAIN,emby.aca.best
+DOMAIN,102.223.180.108
+DOMAIN,stream1.misakaf.org
+DOMAIN,stream2.misakaf.org
+DOMAIN,stream3.misakaf.org
+DOMAIN,stream4.misakaf.org
+# > TreeDiagram服务器
+DOMAIN,789.123456.al
+
+# > 终点站服务器
+#DOMAIN,pub1.emby.wtf
+#DOMAIN,pub2.emby.wtf
+#DOMAIN,pub3.emby.wtf
+DOMAIN,pub1cf.emby.wtf
+DOMAIN,pub2cf.emby.wtf
+DOMAIN,pub3cf.emby.wtf
+DOMAIN,pub1.term.wtf
+DOMAIN,pub2.term.wtf
+DOMAIN,pub3.term.wtf
+# > Nmemby服务器
+DOMAIN,film.ohhhh.org
+
+# > lyrebirdemby服务器
+#DOMAIN,cdn.lyrebirdemby.com
